.archived/kubernetes/storage/rook-ceph(all-in-one)/buckets/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name rook-ceph-rgw-ceph-objectstore-external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: ceph.svg
    gethomepage.dev/name: ceph-buckets
    gethomepage.dev/group: Storage
spec:
  hostnames: ["s3.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: kube-system

  rules:
    - backendRefs:
        - name: *name
          port: 80
